objects/OnePlus__c.object
<CustomObject>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RAM__c</fullName>
        <label>RAM</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <label>Storage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>64GB</fullName>
                </value>
                <value>
                    <fullName>128GB</fullName>
                </value>
                <value>
                    <fullName>256GB</fullName>
                </value>
                <value>
                    <fullName>512GB</fullName>
                </value>
                <value>
                    <fullName>1TB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>OnePlus</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OnePlus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OnePluses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>